--- a/proyecto/codigo/Proyecto_Datos/nbproject/private/private.properties
+++ b/proyecto/codigo/Proyecto_Datos/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\ELO\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Labrador\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
